--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ height: 100vh;
  max-width: 100vw;
 overflow: hidden;
 background-color: #ffffff;
-background-image: url(./1.avif);
+  background-image: url(./1.avif); 
 }
 
    main.container{
@@ -64,6 +64,7 @@ ul.options{
  margin-top: 120px;
       list-style: none;
       margin-left: 12px;
+      margin-right: 13px;
 }
 
 li.option1{
@@ -85,7 +86,7 @@ li.option4{
     cursor: pointer;
 } 
 
-
+ 
 
 div.buttons{
     display: flex;
@@ -110,14 +111,22 @@ div.buttons{
 }
 .buttons .Save-as-image{
     cursor: pointer;
-    color: #fbfdfd;
-   border: 1 solid #0189f8;
- background: blue;
+    color: #fdfbfb;
+ 
+ background: rgb(0, 0, 243);
  height: 27px;
 margin-right: 12px;
  width: 60%;
  letter-spacing: 1.3px;
 }
+
+ li .stroke{
+width: 80px;
+height: 60px;
+cursor: crosshair;
+}
+
+
 
 
 
@@ -138,3 +147,6 @@ canvas.canvas-Board{
    /* cursor: url('./pencil4.png') 100 100, default;   not working because of png-24 file*/
    cursor: crosshair;
 }
+
+
+
