--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ height: 100vh;
  max-width: 100vw;
 overflow: hidden;
 background-color: #ffffff;
- /* background-image: url(./1.avif);  */
+  background-image: url(./1.avif);  
 }
 
    main.container{
