--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ h2{
     letter-spacing: 2px;
     margin-top: 25px;
 }
+
 /*  Drawing tools section */
 .drawing-Tools{
 background-color:#202020;   /*  #dddddd  */
@@ -35,12 +36,11 @@ border-radius: 1px;
 color: rgb(252, 252, 252);  /*  black */ 
 width: 10rem;
 height: 80rem;  /* can be vh */   
-cursor: not-allowed;
 }
 
 
 ul.options{
- margin-top: 120px;
+ margin-top: 40px;
       list-style: none;
       margin-left: 12px;
       margin-right: 13px;
@@ -97,6 +97,7 @@ div.buttons{
 margin-right: 12px;
  width: 60%;
  letter-spacing: 1.3px;
+ font-size: 1rem;
 }
 
  li .stroke{
@@ -104,12 +105,6 @@ width: 80px;
 height: 60px;
 cursor: crosshair;
 }
-
-
-
-
-
-
 
 
 
@@ -131,7 +126,8 @@ canvas.canvas-Board{
     canvas.canvas-Board {
       max-width: 60vw;
         max-height: 100vh;
-    }
+    };
+   
 }
 @media screen and (max-width:925px) and (min-width:600px) {
     canvas.canvas-Board {
@@ -146,3 +142,30 @@ canvas.canvas-Board{
         max-height: 100vh;
     }
 }
+
+/*  for shapes  */
+
+li.circle.tool {
+    margin-top: 7px;
+    margin-bottom: 26px;
+    cursor: pointer;
+}
+li#Brush{
+margin-bottom: 15px;
+margin-left: 15px;
+cursor: pointer;
+}
+li#circle{
+    margin-bottom: 15px;
+    margin-left: 15px;
+    cursor: pointer;
+}
+li#Rectangle{
+    margin-bottom: 30px;
+    margin-left: 15px;
+    cursor: pointer;
+}
+
+
+
+
